--- a/projectNavita/src/app/page/page.component.html
+++ b/projectNavita/src/app/page/page.component.html
@@ -1,5 +1,5 @@
 <div>
-    <table id="tableMarca" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
         <ng-container matColumnDef="nome">
             <th mat-header-cell *matHeaderCellDef> Marcas </th>
@@ -14,6 +14,24 @@
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+    showFirstLastButtons >
+</mat-paginator>
+</div>
+
+
+<div style="margin-top: 140px;">
+    <table mat-table [dataSource]="dataSourceModelo" class="mat-elevation-z8">
+
+        <ng-container matColumnDef="nome">
+            <th mat-header-cell *matHeaderCellDef> Modelo </th>
+            <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
+        </ng-container>
+
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns2"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns2;"></tr>
     </table>
     <mat-paginator [pageSizeOptions]="[5, 10, 20]"
     showFirstLastButtons >
