--- a/projectNavita/src/app/page/page.component.css
+++ b/projectNavita/src/app/page/page.component.css
@@ -1,3 +1,13 @@
 table {
-    width: 100%;
+  width: 1300px;
+  margin-left: 310px;
+  margin-top: 100px;
   }
+
+  .btnDetalhes{
+    color: #4e73df;
+  }
+
+  .btnDetalhes:active{
+    color:#1cc88a;
+}
