--- a/projectRHsoftware/src/app/page/page.component.html
+++ b/projectRHsoftware/src/app/page/page.component.html
@@ -1,8 +1,8 @@
-<div>
+<div style="margin-left: -157px;">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" style="box-shadow: -12px 23px 178px rgb(58 59 69);">
 
         <ng-container matColumnDef="nome">
-            <th mat-header-cell *matHeaderCellDef style="font-size: 20px;color: #1035e9; background-color: #dfdfe1;"> Marcas </th>
+            <th mat-header-cell *matHeaderCellDef style="font-size: 20px;color: #1035e9; background-color: #dfdfe1;"> Cartas </th>
             <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
         </ng-container>
 
@@ -24,7 +24,7 @@
 </div>
 
 
-<div style="margin-top: 140px;">
+<!-- <div style="margin-top: 140px;">
     <table mat-table [dataSource]="dataSourceModelo" class="mat-elevation-z8" style="box-shadow: -12px 23px 178px rgb(58 59 69);">
 
         <ng-container matColumnDef="nome">
@@ -36,7 +36,7 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns2"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns2;"></tr>
     </table>
-</div>
+</div> -->
 
 <div style="
 margin-left: 880px;
